App 17: Forms - Utilizando Combobox - Atualizado

--- a/d17_django_forms_combobox/templates/d17_django_forms_combobox/enviado.html
+++ b/d17_django_forms_combobox/templates/d17_django_forms_combobox/enviado.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>15. Django Forms: Checkbox</title>
+        <title>17. Django Forms: Combobox</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
