--- a/banco_de_dados/multi_database_intro/templates/multi_database_intro/index.html
+++ b/banco_de_dados/multi_database_intro/templates/multi_database_intro/index.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <p><a href="{% url 'views.trocar' tipo='default' %}">Default</a></p>
-        <p><a href="{% url 'views.trocar' tipo='exemplos_dj_add' %}">App</a></p>
+        <p><a href="{% url 'trocar' tipo='default' %}">Default</a></p>
+        <p><a href="{% url 'trocar' tipo='exemplos_dj_add' %}">App</a></p>
 
         <p>Database: {{ tipo }}</p>
 
