--- a/input_types/radio_button_forms/templates/radio_button_forms/index.html
+++ b/input_types/radio_button_forms/templates/radio_button_forms/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Django Forms: Radio Buttom</h1>
         <fieldset style="width:400px;">
-            <form method="POST" action="{% url 'views.enviar' %}">
+            <form method="POST" action="{% url 'enviar' %}">
                 {% csrf_token %}
                 {{ form.as_p }}
                 <button type="submit">Enviar</button>
