--- a/introducao/try_except/templates/try_except/index.html
+++ b/introducao/try_except/templates/try_except/index.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <a href="{% url 'views.add_session' %}">Adicionar session</a>
-        <a href="{% url 'views.del_session' %}">Deletar session</a>
+        <a href="{% url 'add_session' %}">Adicionar session</a>
+        <a href="{% url 'del_session' %}">Deletar session</a>
         
         <p>{{exemplo}}</p>
     </body>
