--- a/banco_de_dados/connection_cursor/templates/connection_cursor/index.html
+++ b/banco_de_dados/connection_cursor/templates/connection_cursor/index.html
@@ -6,17 +6,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <p><a href="{% url 'views.select_all' %}">Mostrar todos</a></p>
-        <p><a href="{% url 'views.select_id' pk=3 %}">Mostrar por id</a></p>
-        <p><a href="{% url 'views.select_first' %}">Mostrar primeiro registro</a></p>
-        <p><a href="{% url 'views.select_filter' %}">Mostrar com filtro</a></p>
-        <p><a href="{% url 'views.select_order_desc' %}">Mostrar por ordem de nome decrescente</a></p>
-        <p><a href="{% url 'views.select_like' nome='Caio' %}">Mostrar com LIKE</a></p>
-        <p><a href="{% url 'views.select_inner_join' %}">Mostrar todos com INNER JOIN</a></p>
-        <p><a href="{% url 'views.select_combined' %}">Mostrar todos com filtro, ordenação e INNER JOIN</a></p><br>
+        <p><a href="{% url 'select_all' %}">Mostrar todos</a></p>
+        <p><a href="{% url 'mostrar_pelo_id' pk=2 %}">Mostrar por id</a></p>
+        <p><a href="{% url 'mostrar_primeiro' %}">Mostrar primeiro registro</a></p>
+        <p><a href="{% url 'mostrar_filtro' %}">Mostrar com filtro</a></p>
+        <p><a href="{% url 'mostrar_ordem_desc' %}">Mostrar por ordem de nome decrescente</a></p>
+        <p><a href="{% url 'mostrar_like' nome='Caio' %}">Mostrar com LIKE</a></p>
+        <p><a href="{% url 'mostrar_todos_inner_join' %}">Mostrar todos com INNER JOIN</a></p>
+        <p><a href="{% url 'mostrar_especifico' %}">Mostrar todos com filtro, ordenação e INNER JOIN</a></p><br>
         
         <div style="width:400px; float: left; border: 1px solid #CCC;">
-            <form action="{% url 'views.insert_usuario' %}" method="POST" name="add_user">
+            <form action="{% url 'ins_usuario' %}" method="POST" name="add_user">
                 {% csrf_token %}
                 <label for="nome">Nome: </label>
                 <input type='text' name='nome' id='nome' required><br>
@@ -26,7 +26,7 @@
             </form>
         </div>
         <div style="width:400px; float: left; border: 1px solid #CCC;">
-            <form action="{% url 'views.insert_comentario' %}" method="POST" name="add_comment">
+            <form action="{% url 'ins_cometario' %}" method="POST" name="add_comment">
                 {% csrf_token %}
                 <label for="usuario_id">ID do usuário:</label>
                 <input type="number" name="usuario_id" id="usuario_id"><br>
@@ -40,8 +40,8 @@
                 {% for usuario in usuarios %}
                     <p>Resultado em Array: {{ usuario }}
                     <p>Nome: {{ usuario.nome }} - 
-                        <a href="{% url 'views.update_usuario' pk=usuario.id %}">Editar</a> - 
-                        <a href="{% url 'views.delete_usuario' pk=usuario.id %}">Deletar</a></p>
+                        <a href="{% url 'up_usuario' pk=usuario.id %}">Editar</a> - 
+                        <a href="{% url 'del_usuario' pk=usuario.id %}">Deletar</a></p>
                     <p>Email: {{ usuario.email }}</p>
 
                     {% if usuario.mensagem %}
