--- a/input_types/checkbox_multi/templates/checkbox_multi/index.html
+++ b/input_types/checkbox_multi/templates/checkbox_multi/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Checkbox Multi</h1>
         <p></p>
-        <form action="{% url 'checkbox_multi.views.enviar' %}" method='POST'>
+        <form action="{% url 'enviar' %}" method='POST'>
             {% csrf_token %}
             <label for='nome'>Nome: </label>
             <input type='text' id='nome' name='nome'/><br>
