--- a/input_types/input_hidden_forms/templates/input_hidden_forms/index.html
+++ b/input_types/input_hidden_forms/templates/input_hidden_forms/index.html
@@ -9,7 +9,7 @@
         <h1>Django Forms: input Hidden</h1>
         <p></p>
         <div style="float:left; width:400px">
-            <form action="{% url 'views.enviar' %}" method="POST" >
+            <form action="{% url 'enviar' %}" method="POST" >
                 {% csrf_token %}
                 {{ form.as_p }}
                 <button type="submit">Enviar</button>
