--- a/input_types/textbox_forms/templates/textbox_forms/enviado.html
+++ b/input_types/textbox_forms/templates/textbox_forms/enviado.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <p>Formulário enviado com sucesso!</p>
-        <a href="{% url 'views.index' %}">Voltar</a>
+        <a href="{% url 'index' %}">Voltar</a>
     </body>
 </html>
