--- a/introducao/links/templates/links/index.html
+++ b/introducao/links/templates/links/index.html
@@ -10,9 +10,9 @@
             <h1>Index</h1>
         </div>
         <ul>
-            <li><a href="{% url 'links.views.index' %}">Index</a></li>
-            <li><a href="{% url 'links.views.pagina01' %}">Página 01</a></li>
-            <li><a href="{% url 'links.views.pagina02' %}">Página 02</a></li>
+            <li><a href="{% url 'index' %}">Index</a></li>
+            <li><a href="{% url 'pagina01' %}">Página 01</a></li>
+            <li><a href="{% url 'views.pagina02' %}">Página 02</a></li>
         </ul>
     </body>
 </html>
