--- a/manipulando_forms/auto_validar_forms/templates/auto_validar_forms/listar.html
+++ b/manipulando_forms/auto_validar_forms/templates/auto_validar_forms/listar.html
@@ -19,7 +19,7 @@
                 </div>
                 {% endfor %}
             {% endif %}
-            <a href="{% url 'views.index' %}">Voltar</a>
+            <a href="{% url 'index' %}">Voltar</a>
         </div>
     </body>
 </html>
