--- a/manipulando_forms/editar_reg_forms/templates/editar_reg_forms/listar.html
+++ b/manipulando_forms/editar_reg_forms/templates/editar_reg_forms/listar.html
@@ -20,7 +20,7 @@
                 </div>
                 {% endfor %}
             {% endif %}
-            <a href="{% url 'views.index' %}">Voltar</a>
+            <a href="{% url 'index' %}">Voltar</a>
         </div>
     </body>
 </html>
