--- a/manipulando_forms/pers_html_forms/templates/pers_html_forms/listar.html
+++ b/manipulando_forms/pers_html_forms/templates/pers_html_forms/listar.html
@@ -35,7 +35,7 @@
                 </div>
                 {% endfor %}
             {% endif %}
-            <a href="{% url 'views.index' %}">Voltar</a>
+            <a href="{% url 'index' %}">Voltar</a>
         </div>
     </body>
 </html>
