--- a/modulos_externos/local_flavor_estados/templates/local_flavor_estados/enviado.html
+++ b/modulos_externos/local_flavor_estados/templates/local_flavor_estados/enviado.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <p>Formulário enviado com sucesso!</p>
-        <a href="{% url 'views.index' %}">Voltar</a>
+        <a href="{% url 'index' %}">Voltar</a>
     </body>
 </html>
