--- a/modulos_externos/local_flavor_form_validacao/templates/local_flavor_form_validacao/index.html
+++ b/modulos_externos/local_flavor_form_validacao/templates/local_flavor_form_validacao/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div>
-            <form method="POST" action="{% url 'views.enviar' %}">
+            <form method="POST" action="{% url 'enviar' %}">
                 {% csrf_token %}
                 {{ form.as_p }}
                 <button type="submit">Enviar</button>
