--- a/templates/template_html/templates/template_html/base.html
+++ b/templates/template_html/templates/template_html/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <title>03. Template</title>
+        <title>Template</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -31,9 +31,9 @@
             </code>
         </pre>
         <p>
-            <a href="{% url 'template_html.views.index' %}">Index</a>
-            <a href="{% url 'template_html.views.pagina' %}">Página</a>
-            <a href="{% url 'template_html.views.base' %}">Template Base</a>
+            <a href="{% url 'index' %}">Index</a>
+            <a href="{% url 'pagina' %}">Página</a>
+            <a href="{% url 'base' %}">Template Base</a>
         </p>
         {% block conteudo %}
         {% endblock %}
