--- a/testes/testando_view/templates/testando_view/adicionar.html
+++ b/testes/testando_view/templates/testando_view/adicionar.html
@@ -7,11 +7,11 @@
     </head>
     <body>
         <ul>
-            <li><a href="{% url 'views.index' %}">Home</a></li>
-            <li><a href="{% url 'views.adicionar' %}">Adicionar</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
+            <li><a href="{% url 'adicionar' %}">Adicionar</a></li>
         </ul>
         <h1>Adicionar</h1>
-        <form action="{% url 'views.enviar' %}" method='POST'>
+        <form action="{% url 'enviar' %}" method='POST'>
             {% csrf_token %}
             {{form.as_p}}
             <input type="submit" value='Enviar'>
