--- a/testes/testando_view/templates/testando_view/index.html
+++ b/testes/testando_view/templates/testando_view/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <ul>
-            <li><a href="{% url 'views.index' %}">Home</a></li>
-            <li><a href="{% url 'views.adicionar' %}">Adicionar</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
+            <li><a href="{% url 'adicionar' %}">Adicionar</a></li>
         </ul>
         
         <table border="1">
